--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <h1>Welcome to GGFACE's website</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>
-  <a href="android-app://ru.sberbankmobile_alpha/androidapp/ru.sberbankmobile/rates">АЛЬФА -> В курсы валют</a>
+  <a href="android-app://ru.sberbankmobile_alpha/android-app/ru.sberbankmobile_alpha/rates">АЛЬФА -> В курсы валют</a>
 </p>
 <p>
-  <a rel="alternate" href="android-app://ru.sberbankmobile/androidapp/ru.sberbankmobile/rates">ПРОМ -> В курсы валют</a>
+  <a href="android-app://ru.sberbankmobile/android-app/ru.sberbankmobile/rates">ПРОМ -> В курсы валют</a>
 </p>
 </body>
 </html>
