--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <h1>Welcome to GGFACE's website</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>
-  <a href="android-app://ru.sberbankmobile_alpha/android-app/ru.sberbankmobile_alpha/rates">АЛЬФА -> В курсы валют</a>
+  <a href="android-app://ru.sberbankmobile_alpha/android-app/ru.sberbankmobile_alpha/rates">АЛЬФА -> В валюты</a>
 </p>
 <p>
-  <a href="android-app://ru.sberbankmobile/android-app/ru.sberbankmobile/rates">ПРОМ -> В курсы валют</a>
+  <a href="android-app://ru.sberbankmobile_alpha/android-app/ru.sberbankmobile_alpha/rates/metal">АЛЬФА -> В металлы</a>
+</p>
+<p>
+  <a href="android-app://ru.sberbankmobile/android-app/ru.sberbankmobile/rates">ПРОМ -> В валюты</a>
+</p>
+<p>
+  <a href="android-app://ru.sberbankmobile/android-app/ru.sberbankmobile/rates/metal">ПРОМ -> В металлы</a>
 </p>
 </body>
 </html>
